--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Search Engine</title>
     </head>
     <body>
-        <h1>Query</h1>
+        <h1>Provide Your Query:</h1>
         <input id = "query" type = "text" name = "query" />
         <button type="submit">Search</button>
     </body>
