--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1>Provide Your Query:</h1>
         <input id = "query" type = "text" name = "query" />
         <button type="submit">Search</button>
+        <script src = "index.js"></script>
     </body>
 </html>
