--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>Provide Your Query:</h1>
         <input id = "query" type = "text" name = "query" />
-        <button type="submit">Search</button>
+        <div id = "results"></div>
         <script src = "index.js"></script>
     </body>
 </html>
